--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
     <link href="https://plus.google.com/+ChenJun" rel="author" />
     <title>CHENJUN.COM &middot; 陈俊的网：浮生志</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="/assets/css/poole.css" />
-    <link rel="stylesheet" href="/assets/css/syntax.css" />
-    <link rel="stylesheet" href="/assets/css/lanyon.css" />
+    <link rel="stylesheet" href="https://zhu8.net/assets/css/poole.css" />
+    <link rel="stylesheet" href="https://zhu8.net/assets/css/syntax.css" />
+    <link rel="stylesheet" href="https://zhu8.net/assets/css/lanyon.css" />
     <!-- Icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/apple-touch-icon-precomposed.png" />
-    <link rel="shortcut icon" href="/assets/favicon.ico" />
-    <!-- RSS -->
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://zhu8.net/assets/apple-touch-icon-precomposed.png" />
+    <link rel="shortcut icon" href="https://zhu8.net/assets/favicon.ico" />
 </head>
 
   <body class="layout-reverse sidebar-overlay">
@@ -56,9 +54,6 @@
     </a>
     <a class="link" href="http://weibo.com/Zhu8/" rel="me" title="关注我的新浪微博!">
         <i id="weibo-ic" class="fa fa-weibo"></i>
-    </a>
-    <a class="link" href="/feed.xml" title="Subscribe ChenJun.COM's Feed!">
-        <i id="rss-ic" class="fa fa-rss"></i>
     </a>
 </span>
           </h3>
@@ -88,7 +83,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
     <div class="sidebar-misc">
-        <img src="https://chenjun.com/images/zhubajie.png" alt="Zhu Ba Jie!" title="Zhu Ba Jie!" /><!-- Stephen Chow「你以為你匿喺度就搵你唔到咩？冇用㗎！你啲咁出色嘅難忍，無論喺邊度，就好似漆黑中嘅螢火蟲一樣，咁鮮明、咁出眾。你憂鬱嘅眼神、唏噓嘅鬚根、神乎奇技嘅刀法、同埋嗰杯Dry Martini，都徹底咁將你出賣咗！」 -->
+        <img src="https://zhu8.net/images/zhubajie.png" alt="Zhu Ba Jie!" title="Zhu Ba Jie!" /><!-- Stephen Chow「你以為你匿喺度就搵你唔到咩？冇用㗎！你啲咁出色嘅難忍，無論喺邊度，就好似漆黑中嘅螢火蟲一樣，咁鮮明、咁出眾。你憂鬱嘅眼神、唏噓嘅鬚根、神乎奇技嘅刀法、同埋嗰杯Dry Martini，都徹底咁將你出賣咗！」 -->
     </div>
     <nav class="sidebar-nav">
         <a class="sidebar-nav-item" href="https://zhu8.net/"><i class="fa fa-home fa-fw"></i>&nbsp; 站点首页 &middot; Home</a>
@@ -102,7 +97,7 @@
         <span class="copyright">
             <small><i class="fa fa-2x fa-rocket"></i>&nbsp; Build with <a href="http://jekyllrb.com/">Jekyll</a> & <a href="https://bitbucket.org/">BitBucket</a>.</small>
         </span>
-        <a href="javascript:scroll(0,0)"><img src="/images/google-doraemon.png" width="70%" alt="I'M a Fan of Google & Doraemon!" title="I'M a Fan of Google & Doraemon!" /></a>
+        <a href="javascript:scroll(0,0)"><img src="https://zhu8.net/images/google-doraemon.png" width="70%" alt="I'M a Fan of Google & Doraemon!" title="I'M a Fan of Google & Doraemon!" /></a>
     </div>
 </div>
     <script>
@@ -127,7 +122,7 @@
       //<![CDATA[
       (window.jQuery)||document.write('<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery/jquery-1.11.1.min.js"><\/script>');//]]>
     </script>
-    <script src="/assets/js/go-top.js" type="text/javascript"></script>
+    <script src="https://zhu8.net/assets/js/go-top.js" type="text/javascript"></script>
 <script type="application/javascript">
 var doNotTrack = false;
 if (!doNotTrack) {
