--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="page">
   <h1 class="page-title">CHENJUN.COM</h1>
   <p class="lead">您光临了我的 <b>CHENJUN.COM</b><sup>&reg;</sup><i>页面！</i></p>
-<p>此域名是我的姓名 <strong>.COM</strong>保留 /  当然，也可<strong>出售</strong>。</p>
-<p>This domain was my Name in <strong>Chinese</strong> /  if you like,it can be<strong>SELL</strong> indeed.</p>
+<p>此域名是我的姓名拼音的 <strong>.COM</strong>保留 /  当然，也可<strong>出售</strong>。</p>
+<p>This domain was my Name in <strong>Chinese</strong> /  if you like,it can be <strong>SELL</strong> indeed.</p>
 <ul>
 	<li><span>邮件联系</span> &raquo; <strong><a href="mailto:%7A%68%75%38%2E%6E%65%74%40%71%71%2E%63%6F%6D">Email to ME</a>
 <!-- zhu8 dot net at qq dot com --></strong></li>
