--- a/404.html
+++ b/404.html
@@ -68,9 +68,9 @@
 <p>This domain has index <strong>ONLY</strong> /  if you like,it can be <strong>SELL</strong> indeed.</p>
 <ul>
 	<li><span>邮件联系</span> &raquo; <strong><a href="mailto:%7A%68%75%38%2E%6E%65%74%40%71%71%2E%63%6F%6D">Email to ME</a>
-<!-- zhu8 dot net at qq dot com --></strong></li>
+<!-- zhu8 dot net at qq dot com --></strong> or Click <a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&utm_medium=sn_affiliate_click&utm_campaign=TDFS_GoDaddy_DLS&traffic_type=TDFS&traffic_id=GoDaddy_DLSHERE">HERE</a></li>
 </ul>
-<p>其他内容，请<span style="color:red;">前往 <b><a href="https://zhu8.net/">Zhu8.Net</a></b> 自行探索！</span></p>
+<p>如访问原网站，请<span style="color:red;">前往 <b><a href="https://zhu8.net/">Zhu8.Net</a></b> 并(Type,Search!)即可！</span></p>
 </div>
 
       </div>
