--- a/404.html
+++ b/404.html
@@ -23,14 +23,14 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1" name="viewport" />
     <link href="http://feeds.feedburner.com/Zhu8/" rel="alternate" title=" Feed" type="application/atom+xml" />
     <link href="https://plus.google.com/+ChenJun" rel="author" />
-    <title>CHENJUN.COM &middot; 陈俊的网：浮生志</title>
+    <title>404 PAGE of CHENJUN.COM &middot; 陈俊的网：浮生志</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="https://zhu8.net/assets/css/poole.css" />
-    <link rel="stylesheet" href="https://zhu8.net/assets/css/syntax.css" />
-    <link rel="stylesheet" href="https://zhu8.net/assets/css/lanyon.css" />
+    <link rel="stylesheet" href="/assets/css/poole.css" />
+    <link rel="stylesheet" href="/assets/css/syntax.css" />
+    <link rel="stylesheet" href="/assets/css/lanyon.css" />
     <!-- Icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://zhu8.net/assets/apple-touch-icon-precomposed.png" />
-    <link rel="shortcut icon" href="https://zhu8.net/assets/favicon.ico" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/apple-touch-icon-precomposed.png" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" />
 </head>
 
   <body class="layout-reverse sidebar-overlay">
@@ -122,7 +122,7 @@
       //<![CDATA[
       (window.jQuery)||document.write('<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery/jquery-1.11.1.min.js"><\/script>');//]]>
     </script>
-    <script src="https://zhu8.net/assets/js/go-top.js" type="text/javascript"></script>
+    <script src="/assets/js/go-top.js" type="text/javascript"></script>
 <script type="application/javascript">
 var doNotTrack = false;
 if (!doNotTrack) {
