--- a/404.html
+++ b/404.html
@@ -123,17 +123,6 @@
       (window.jQuery)||document.write('<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery/jquery-1.11.1.min.js"><\/script>');//]]>
     </script>
     <script src="/assets/js/go-top.js" type="text/javascript"></script>
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-7102271-1', 'auto');
-	
-	ga('send', 'pageview');
-}
-</script>
+    <script async defer data-website-id="a202b445-5f89-4afa-8ef9-94327d49807e" src="https://ana.zhu8.net/welcome.js"></script>
   </body>
 </html>
