--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
         <div class="page">
   <h1 class="page-title">CHENJUN.COM</h1>
   <p class="lead">您光临了我的 <b>CHENJUN.COM</b><sup>&reg;</sup><i>页面！</i></p>
-<p>此域名是我的姓名拼音的 <strong>.COM</strong>保留 /  当然，也可<strong>出售</strong>。</p>
-<p>This domain was my Name in <strong>Chinese</strong> /  if you like,it can be <strong>SELL</strong> indeed.</p>
+  <p class="lead">访问原网站的文章，请<span style="color:red;">前往 <b><a href="https://zhu8.net/" rel="bookmark">Zhu8.Net</a></b> 并(Type,Search!)即可！</span></p>
+  <p>此域名是我的姓名拼音的 <strong>.COM</strong>保留 /  当然，也可<strong>出售</strong>。</p>
+  <p>This domain was my Name in <strong>Chinese</strong> /  if you like,it can be <strong>SELL</strong> indeed.</p>
 <ul>
 	<li><span>邮件联系</span> &raquo; <strong><a href="mailto:%7A%68%75%38%2E%6E%65%74%40%71%71%2E%63%6F%6D">Email to ME</a>
 <!-- zhu8 dot net at qq dot com --></strong> or Click <a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&utm_medium=sn_affiliate_click&utm_campaign=TDFS_GoDaddy_DLS&traffic_type=TDFS&traffic_id=GoDaddy_DLSHERE">HERE</a></li>
+<li><span>访问使用Jekyll搭建的原 <em>CHENJUN.COM</em> 网站</span> &raquo; <strong><a href="https://izhu8.github.io" target="_blank">Jekyll @ GitHub.io</a>
+<!-- also known as ChenJun.COM --></strong></li>
 </ul>
-<p>如访问原网站，请<span style="color:red;">前往 <b><a href="https://zhu8.net/">Zhu8.Net</a></b> 并(Type,Search!)即可！</span></p>
 </div>
 
       </div>
