--- a/404.html
+++ b/404.html
@@ -97,7 +97,7 @@
         <span class="copyright">
             <small><i class="fa fa-2x fa-rocket"></i>&nbsp; Build with <a href="http://jekyllrb.com/">Jekyll</a> & <a href="https://bitbucket.org/">BitBucket</a>.</small>
         </span>
-        <a href="javascript:scroll(0,0)"><img src="https://zhu8.net/images/google-doraemon.png" width="70%" alt="I'M a Fan of Google & Doraemon!" title="I'M a Fan of Google & Doraemon!" /></a>
+        <a href="javascript:scroll(0,0)"><img src="https://zhu8.net/images/google-doraemon.png" width="180px" alt="I'M a Fan of Google & Doraemon!" title="I'M a Fan of Google & Doraemon!" /></a>
     </div>
 </div>
     <script>
@@ -117,12 +117,12 @@
         }, false);
       })(document);
     </script>
-    <script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
+    <script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script>
       //<![CDATA[
-      (window.jQuery)||document.write('<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery/jquery-1.11.1.min.js"><\/script>');//]]>
+      (window.jQuery)||document.write('<script src="//ajax.aspnetcdn.com/ajax/jquery/jquery-1.11.1.min.js"><\/script>');//]]>
     </script>
-    <script src="/assets/js/go-top.js" type="text/javascript"></script>
+    <script src="/assets/js/go-top.js"></script>
     <script async defer data-website-id="a202b445-5f89-4afa-8ef9-94327d49807e" src="https://ana.zhu8.net/welcome.js"></script>
   </body>
 </html>
