--- a/404.html
+++ b/404.html
@@ -97,7 +97,7 @@
         <span class="copyright">
             <small><i class="fa fa-2x fa-rocket"></i>&nbsp; Build with <a href="http://jekyllrb.com/">Jekyll</a> & <a href="https://bitbucket.org/">BitBucket</a>.</small>
         </span>
-        <a href="javascript:scroll(0,0)"><img src="https://zhu8.net/images/google-doraemon.png" width="180px" alt="I'M a Fan of Google & Doraemon!" title="I'M a Fan of Google & Doraemon!" /></a>
+        <a href="javascript:scroll(0,0)"><img src="https://zhu8.net/images/google-doraemon.png" width="180" alt="I'M a Fan of Google & Doraemon!" title="I'M a Fan of Google & Doraemon!" /></a>
     </div>
 </div>
     <script>
