--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <ul>
 	<li><span>邮件联系</span> &raquo; <strong><a href="mailto:%7A%68%75%38%2E%6E%65%74%40%71%71%2E%63%6F%6D">Email to ME</a>
 <!-- zhu8 dot net at qq dot com --></strong> or Click <a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&utm_medium=sn_affiliate_click&utm_campaign=TDFS_GoDaddy_DLS&traffic_type=TDFS&traffic_id=GoDaddy_DLSHERE">HERE</a></li>
-<li><span>访问使用Jekyll搭建的原 <em>CHENJUN.COM</em> 网站</span> &raquo; <strong><a href="https://izhu8.github.io" target="_blank">Jekyll @ GitHub.io</a>
+	<li><span>访问使用<strong>Jekyll</strong>搭建的原 <em>CHENJUN.COM</em> 网站</span> &raquo; <strong><a href="https://ichenjun.github.io" target="_blank">Jekyll @ GitHub.io</a>
 <!-- also known as ChenJun.COM --></strong></li>
 </ul>
 </div>
