--- a/index.html
+++ b/index.html
@@ -62,17 +62,25 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title">CHENJUN.COM</h1>
-  <p class="lead">您光临了我的 <b>CHENJUN.COM</b><sup>&reg;</sup><i>页面！</i></p>
-  <p class="lead">访问原网站的文章，请<span style="color:red;">前往 <b><a href="https://zhu8.net/" rel="bookmark">Zhu8.Net</a></b> 并(Type,Search!)即可！</span></p>
-  <p>此域名是我的姓名拼音的 <strong>.COM</strong>保留 /  当然，也可<strong>出售</strong>。</p>
-  <p>This domain was my Name in <strong>Chinese</strong> /  if you like,it can be <strong>SELL</strong> indeed.</p>
+<h1 class="page-title">CHENJUN.COM</h1>
+<p class="lead"><strong>CHENJUN.COM</strong><sup>&reg;</sup> (<em><strong>Without</strong> Maintenance 🚧 , Ready for <strong>Sell</strong>.</em>)</p>
+<p class="lead">原网站的文章，已迁移至&nbsp;<strong><a href="https://zhu8.net/">Zhu8.Net</a></strong> (<em>🐽🎱 Powered By <strong>Hugo</strong> in <strong>Chinese</strong>.</em>)</p>
+<p class="lead">请前往，并在首页<span style="color: red;">(Type,Search!)</span>即可！</p>
+<hr class="ke-pagebreak" style="page-break-after: always;" />
+<p>&nbsp;</p>
+<p class="lead">此域名是我的姓名拼音 <strong>.COM</strong> 保留 / 当然，也可 <strong><a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&amp;utm_medium=sn_affiliate_click&amp;utm_campaign=TDFS_GoDaddy_DLS&amp;traffic_type=TDFS&amp;traffic_id=GoDaddy_DLSHERE"><span style="color: #ffe500; background-color: #000000;">出售</span></a></strong> ❗️(<em><strong>点击链接</strong> 去 <strong>购买</strong>.</em>)❗️。</p>
+<p class="lead">This domain was Pinyin in <strong>Chinese</strong> / it can be <strong><a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&amp;utm_medium=sn_affiliate_click&amp;utm_campaign=TDFS_GoDaddy_DLS&amp;traffic_type=TDFS&amp;traffic_id=GoDaddy_DLSHERE"><span style="background-color: #000000; color: #ffe500;">SELL</span></a></strong> ❗️(<em><strong>Click</strong> to <strong>Buy</strong>.</em>)❗️.</p>
 <ul>
-	<li><span>邮件联系</span> &raquo; <strong><a href="mailto:%7A%68%75%38%2E%6E%65%74%40%71%71%2E%63%6F%6D">Email to ME</a>
-<!-- zhu8 dot net at qq dot com --></strong> or Click <a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&utm_medium=sn_affiliate_click&utm_campaign=TDFS_GoDaddy_DLS&traffic_type=TDFS&traffic_id=GoDaddy_DLSHERE">HERE</a></li>
-	<li><span>访问使用<strong>Jekyll</strong>搭建的原 <em>CHENJUN.COM</em> 网站</span> &raquo; <strong><a href="https://ichenjun.github.io" target="_blank">Jekyll @ GitHub.io</a>
-<!-- also known as ChenJun.COM --></strong></li>
+<li>邮件 📬 联系 &raquo; <strong><a href="mailto:%7A%68%75%38%2E%6E%65%74%40%71%71%2E%63%6F%6D">Email to ME</a> <!-- zhu8 dot net at qq dot com --></strong></li>
+<li><strong>Jekyll</strong>搭建的 <em>CHENJUN.COM</em> &raquo; <strong><a href="https://ichenjun.github.io" target="_blank" rel="noopener">Jekyll @ GitHub.io</a> <!-- also known as ChenJun.COM --></strong></li>
 </ul>
+<h3 id="哥林多前书-134-8-cunpss-神">哥林多前书 13:4-8 CUNPSS-神</h3>
+<blockquote>
+<p>爱是恒久忍耐，又有恩慈；</p>
+<p>爱是不嫉妒；爱是不自夸，不张狂，不做害羞的事，不求自己的益处，不轻易发怒，不计算人的恶，不喜欢不义，只喜欢真理；</p>
+<p>凡事包容，凡事相信，凡事盼望，凡事忍耐。</p>
+<p>爱是永不止息。先知讲道之能终必归于无有；说方言之能终必停止；知识也终必归于无有。</p>
+</blockquote>
 </div>
 
       </div>
