--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
         <div class="page">
 <h1 class="page-title">CHENJUN.COM</h1>
 <p class="lead"><strong>CHENJUN.COM</strong><sup>&reg;</sup> (<em><strong>Without</strong> Maintenance 🚧 , Ready for <strong>Sell</strong>.</em>)</p>
-<p class="lead">原网站的文章，已迁移至&nbsp;<strong><a href="https://zhu8.net/">Zhu8.Net</a></strong> (<em>🐽🎱 Powered By <strong>Hugo</strong> in <strong>Chinese</strong>.</em>)</p>
+<p class="lead">网站已迁移至&nbsp;<strong><a href="https://zhu8.net/" rel="bookmark">Zhu8.Net</a></strong> (<em>🐽🎱 Powered By <strong>Hugo</strong> in <strong>Chinese</strong>.</em>)</p>
 <p class="lead">请前往，并在首页<span style="color: red;">(Type,Search!)</span>即可！</p>
 <hr class="ke-pagebreak" style="page-break-after: always;" />
-<p>&nbsp;</p>
-<p class="lead">此域名是我的姓名拼音 <strong>.COM</strong> 保留 / 当然，也可 <strong><a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&amp;utm_medium=sn_affiliate_click&amp;utm_campaign=TDFS_GoDaddy_DLS&amp;traffic_type=TDFS&amp;traffic_id=GoDaddy_DLSHERE"><span style="color: #ffe500; background-color: #000000;">出售</span></a></strong> ❗️(<em><strong>点击链接</strong> 去 <strong>购买</strong>.</em>)❗️。</p>
-<p class="lead">This domain was Pinyin in <strong>Chinese</strong> / it can be <strong><a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&amp;utm_medium=sn_affiliate_click&amp;utm_campaign=TDFS_GoDaddy_DLS&amp;traffic_type=TDFS&amp;traffic_id=GoDaddy_DLSHERE"><span style="background-color: #000000; color: #ffe500;">SELL</span></a></strong> ❗️(<em><strong>Click</strong> to <strong>Buy</strong>.</em>)❗️.</p>
+<p class="lead">此域名是拼音 <strong>.COM</strong> / 可 <strong><a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&amp;utm_medium=sn_affiliate_click&amp;utm_campaign=TDFS_GoDaddy_DLS&amp;traffic_type=TDFS&amp;traffic_id=GoDaddy_DLSHERE"><span style="color: #ffe500; background-color: #000000;">出售</span></a></strong> ❗️(<em><strong>点击链接</strong> 去 <strong>购买</strong>.</em>)❗️。</p>
+<p class="lead">This domain was <strong>Pinyin</strong> / Can be <strong><a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&amp;utm_medium=sn_affiliate_click&amp;utm_campaign=TDFS_GoDaddy_DLS&amp;traffic_type=TDFS&amp;traffic_id=GoDaddy_DLSHERE"><span style="background-color: #000000; color: #ffe500;">SELL</span></a></strong> ❗️(<em><strong>Click</strong> to <strong>Buy</strong>.</em>)❗️.</p>
 <ul>
 <li>邮件 📬 联系 &raquo; <strong><a href="mailto:%7A%68%75%38%2E%6E%65%74%40%71%71%2E%63%6F%6D">Email to ME</a> <!-- zhu8 dot net at qq dot com --></strong></li>
 <li><strong>Jekyll</strong>搭建的 <em>CHENJUN.COM</em> &raquo; <strong><a href="https://ichenjun.github.io" target="_blank" rel="noopener">Jekyll @ GitHub.io</a> <!-- also known as ChenJun.COM --></strong></li>
