--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="page">
 <h1 class="page-title">CHENJUN.COM</h1>
 <p class="lead"><strong>CHENJUN.COM</strong><sup>&reg;</sup> (<em><strong>Without</strong> Maintenance 🚧 , Ready for <strong>Sell</strong>.</em>)</p>
-<p class="lead">网站已迁移至&nbsp;<strong><a href="https://zhu8.net/" rel="bookmark">Zhu8.Net</a></strong> (<em>🐽🎱 Powered By <strong>Hugo</strong> in <strong>Chinese</strong>.</em>)</p>
+<p class="lead">已迁移至&nbsp;<strong><a href="https://zhu8.net/" rel="bookmark">Zhu8.Net</a></strong> (<em>🐽🎱 Powered By <strong>Hugo</strong> in <strong>Chinese</strong>.</em>)</p>
 <p class="lead">请前往，并在首页<span style="color: red;">(Type,Search!)</span>即可！</p>
 <hr class="ke-pagebreak" style="page-break-after: always;" />
 <p class="lead">此域名是拼音 <strong>.COM</strong> / 可 <strong><a href="https://www.afternic.com/forsale/chenjun.com?utm_source=TDFS&amp;utm_medium=sn_affiliate_click&amp;utm_campaign=TDFS_GoDaddy_DLS&amp;traffic_type=TDFS&amp;traffic_id=GoDaddy_DLSHERE"><span style="color: #ffe500; background-color: #000000;">出售</span></a></strong> ❗️(<em><strong>点击链接</strong> 去 <strong>购买</strong>.</em>)❗️。</p>
